Finnessed the Force Positioning Functionality

--- a/usage.html
+++ b/usage.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="btn b smart-tooltip-container">
+    <button class="smart-tooltip-container">
         Button 
         <span class="smart-tooltip">Welcome</span>
     </button>
     <style>
-        .btn{
+        .smart-tooltip-container{
             padding: 10px;
             background-color: orange;
         }
