--- a/usage.html
+++ b/usage.html
@@ -7,15 +7,37 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="smart-tooltip-container">
-        Button 
-        <span class="smart-tooltip">Welcome</span>
-    </button>
+    <div class="container">
+        <button class="smart-tooltip-container">
+            Button 
+            <span class="smart-tooltip overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
+        </button>
+    </div>
+    
     <style>
+        body{
+            height: calc(100vh);
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+        }
+        .container{
+            overflow: hidden;
+            height: 200px;
+            width: 200px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         .smart-tooltip-container{
-            padding: 10px;
+            padding: 10px 20px;
             background-color: orange;
         }
+        .smart-tooltip{
+            width: 600px;
+        }
+
     </style>
 
     <script type="module">
