--- a/usage.html
+++ b/usage.html
@@ -20,7 +20,7 @@
             margin: 20;
             display: flex;
             align-items: center;
-            justify-content: flex-end;
+            justify-content: center;
         }
         .container{
             overflow: hidden;
