Added Tooltip Stick

--- a/usage.html
+++ b/usage.html
@@ -10,7 +10,7 @@
     <div class="container">
         <button class="smart-tooltip-container">
             Button 
-            <span class="smart-tooltip overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
+            <span class="smart-tooltip stay-bottom overlay stick-100">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
         </button>
     </div>
     
