--- a/usage.html
+++ b/usage.html
@@ -33,6 +33,7 @@
         .smart-tooltip-container{
             padding: 10px 20px;
             background-color: orange;
+            transform: scale(1);
         }
         .smart-tooltip{
             width: 400px;
@@ -44,6 +45,7 @@
         import {smartTooltip} from "./index.js";
         smartTooltip();
     </script>
+    <!-- <div style="width: 100px; height: 100px; background-color: red;"></div> -->
 
 </body>
 </html>
