--- a/usage.html
+++ b/usage.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <button class="smart-tooltip-container">
+        <div class="smart-tooltip-container">
             Button 
-            <span class="smart-tooltip stay-bottom overlay stick-100">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
-        </button>
+            <span class="smart-tooltip stay-bottom overlay stick-500">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
+        </div>
     </div>
     
     <style>
@@ -33,7 +33,7 @@
         .smart-tooltip-container{
             padding: 10px 20px;
             background-color: orange;
-            transform: scale(1);
+            /* transform: scale(1); */
         }
         .smart-tooltip{
             width: 400px;
