--- a/usage.html
+++ b/usage.html
@@ -10,7 +10,15 @@
     <div class="container">
         <div class="smart-tooltip-container">
             Button 
-            <span class="smart-tooltip stay-bottom overlay stick-500">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
+            <span class="smart-tooltip stay-bottom overlay stick stayonhover">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
+        </div>
+        <div class="smart-tooltip-container">
+            Button 
+            <span class="smart-tooltip stay-bottom overlay stick-1000 stayonhover">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
+        </div>
+        <div class="smart-tooltip-container">
+            Button 
+            <span class="smart-tooltip stay-bottom overlay stick-1000 stayonhover">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
         </div>
     </div>
     
@@ -23,7 +31,7 @@
             justify-content: center;
         }
         .container{
-            overflow: hidden;
+            /* overflow: hidden; */
             height: 200px;
             width: 200px;
             display: flex;
