Added ClickToShow Feature

--- a/usage.html
+++ b/usage.html
@@ -12,9 +12,9 @@
             Button 
             <span class="smart-tooltip stay-bottom overlay stick stayonhover">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
         </div>
-        <div class="smart-tooltip-container">
+        <div class="smart-tooltip-container clicktoshow">
             Button 
-            <span class="smart-tooltip stay-bottom overlay stick-1000 stayonhover">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
+            <span class="smart-tooltip overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, atque eos rerum, necessitatibus vitae ad culpa vel omnis soluta, ut nemo ipsa repudiandae quidem? Ipsum quis dignissimos beatae voluptatum! Adipisci?</span>
         </div>
         <div class="smart-tooltip-container">
             Button 
